--- a/MDM_api/.github/workflows/actoins.yml
+++ b/MDM_api/.github/workflows/actoins.yml
@@ -1,24 +1,28 @@
  name: myfirstAcnions
  on:
   push:
-     branches:
+     branches:  
        - master
  jobs:
    build:
      runs-on: ubuntu-latest
+# Plugin checkout
      steps:
-       - uses: actions/checkout@v2
-       - uses: actions/setup-java@v2
+       - uses: actions/checkout@v3
+# java setup
+       - uses: actions/setup-java@v3
          with:
            distribution: 'zulu'
            java-version: '17'
        - run: mvn clean test
+# Копируем историю в папку allure-history
        - name: Copy History
          uses: actions/checkout@v2
          if: always()
          with:
            ref: gh-pages
            path: gh-pages
+# Строим отчет используя папку allure-history
        - name: Build report
          uses: simple-elf/allure-report-action@master
          if: always()
@@ -26,6 +30,7 @@
            allure_results: build/allure-results
            allure_history: allure-history
            keep_reports: '20'
+ # Публикуем отчет
        - name: Publish report
          if: always()
          uses: peaceiris/actions-gh-pages@v2
