--- a/MDM_api/.github/workflows/actoins.yml
+++ b/MDM_api/.github/workflows/actoins.yml
@@ -12,12 +12,13 @@
 # java setup
        - uses: actions/setup-java@v3
          with:
-           distribution: 'zulu'
-           java-version: '17'
-       - run: mvn clean test
+           distribution: zulu
+           java-version: 17
+       - name: Run Tests
+         run: mvn clean test
  # Копируем историю в папку allure-history.
        - name: Copy History
-         uses: actions/checkout@v2
+         uses: actions/checkout@v3
          if: always()
          with:
            ref: gh-pages
@@ -26,15 +27,16 @@
        - name: Build report
          uses: simple-elf/allure-report-action@master
          if: always()
-         with: 
+         with:
+           gh_pages: gh-pages
            allure_results: build/allure-results
            allure_history: allure-history
-           keep_reports: '20'
  # Публикуем отчет
        - name: Publish report
          if: always()
          uses: peaceiris/actions-gh-pages@v2
          env:
-            PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            github_token: $
+            # PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             PUBLISH_BRANCH: gh-pages
             PUBLISH_DIR: allure-history
