--- a/MDM_api/.github/workflows/actoins.yml
+++ b/MDM_api/.github/workflows/actoins.yml
@@ -1,4 +1,4 @@
- name: myfirstAcnions
+ name: myAcnions
  on:
   push:
      branches:  
@@ -25,17 +25,17 @@
            path: gh-pages
 # Строим отчет используя папку allure-history
        - name: Build report
-         uses: simple-elf/allure-report-action@master
+         uses: simple-elf/allure-report-action@v1.7
          if: always()
          with:
            gh_pages: gh-pages
-           allure_results: build/allure-results
+           allure_results: target/allure-results
            allure_history: allure-history
  # Публикуем отчет
        - name: Publish report
          if: always()
-         uses: peaceiris/actions-gh-pages@v2
-         env:
+         uses: peaceiris/actions-gh-pages@v3
+         with:
             github_token: $
             # PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             PUBLISH_BRANCH: gh-pages
