--- a/.github/workflows/newworkwlow.yml
+++ b/.github/workflows/newworkwlow.yml
@@ -1,51 +1,89 @@
- name: myAcnions
- on:
-  push:
-     branches:  
-       - master
- jobs:
-   build:
-     runs-on: ubuntu-latest 
-       # Plugin checkout
-     steps:
-       - uses: actions/checkout@v3
-# java setup
-       - uses: actions/setup-java@v3 
-         with:
-           distribution: 'zulu'
-           java-version: '17'
-       # - name:Run Tests
-       - run: mvn --batch-mode --update-snapshots verify
-       - run: mkdir staging && cp target/*.jar staging
-       - uses: actions/upload-artifact@v3
-         with:
-           name: Package
-           path: staging
-       - uses: actions/upload-artifact@v3
-         with:
-          name: Package
-          path: staging
- # Копируем историю в папку allure-history.
-       - name: Copy History
-         uses: actions/checkout@v3
-         if: always()
-         with:
-           ref: gh-pages
-           path: gh-pages
-# Строим отчет используя папку allure-history
-       - name: Build report
-         uses: simple-elf/allure-report-action@master
-         if: always()
-         with:
-           gh_pages: gh-pages
-           allure_results: build/allure-results
-           allure_history: allure-history
- # Публикуем отчет
-       - name: Publish report
-         if: always()
-         uses: peaceiris/actions-gh-pages@v3
-         with:
-            # github_token: $
-            PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            PUBLISH_BRANCH: gh-pages
-            PUBLISH_DIR: allure-history
+name: myfirstAcnions
+on:
+ push:
+    branches:
+      - main
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps: 
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v2
+        with: 
+          distribution: 'zulu'
+          java-version: '17'
+      - run: mvn clean test  
+      - name: Copy History
+        uses: actions/checkout@v2
+        if: always()
+        with:
+          ref: gh-pages
+          path: gh-pages
+      - name: Build report 
+        uses: simple-elf/allure-report-action@master
+        if: always()
+        with:
+          allure_results: build/allure-results
+          allure_history: allure-history
+          keep_reports: '20'
+      - name: Publish report
+        if: always()
+        uses: peaceiris/actions-gh-pages@v2
+        env:
+           PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+           PUBLISH_BRANCH: gh-pages
+           PUBLISH_DIR: allure-history
+
+
+
+#  name: myAcnions
+#  on:
+#   push:
+#      branches:  
+#        - master
+#  jobs:
+#    build:
+#      runs-on: ubuntu-latest 
+#        # Plugin checkout
+#      steps:
+#        - uses: actions/checkout@v3
+# # java setup
+#        - uses: actions/setup-java@v3 
+#          with:
+#            distribution: 'zulu'
+#            java-version: '17'
+#        # - name:Run Tests
+#        - run: mvn --batch-mode --update-snapshots verify
+#        - run: mkdir staging && cp target/*.jar staging
+#        - uses: actions/upload-artifact@v3
+#          with:
+#            name: Package
+#            path: staging
+#        - uses: actions/upload-artifact@v3
+#          with:
+#           name: Package
+#           path: staging
+#  # Копируем историю в папку allure-history.
+#        - name: Copy History
+#          uses: actions/checkout@v3
+#          if: always()
+#          with:
+#            ref: gh-pages
+#            path: gh-pages
+# # Строим отчет используя папку allure-history
+#        - name: Build report
+#          uses: simple-elf/allure-report-action@master
+#          if: always()
+#          with:
+#            gh_pages: gh-pages
+#            allure_results: build/allure-results
+#            allure_history: allure-history
+#  # Публикуем отчет
+#        - name: Publish report
+#          if: always()
+#          uses: peaceiris/actions-gh-pages@v3
+#          with:
+#             # github_token: $
+#             PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#             PUBLISH_BRANCH: gh-pages
+#             PUBLISH_DIR: allure-history
