--- a/MDM_api/.github/workflows/newworkwlow.yml
+++ b/MDM_api/.github/workflows/newworkwlow.yml
@@ -12,7 +12,17 @@ jobs:
         with: 
           distribution: 'zulu'
           java-version: '17'
-      - run: mvn clean test  
+
+       
+      - name: Install dependencies
+        run: mvn dependency:go-offline compile compiler:testCompile
+
+      - name: Run Test
+        if: always()
+        run: mvn test
+        continue-on-error: true   
+   
+      
       - name: Copy History
         uses: actions/checkout@v2
         if: always()
