--- a/.github/workflows/newworkwlow.yml
+++ b/.github/workflows/newworkwlow.yml
@@ -12,17 +12,12 @@ jobs:
         with: 
           distribution: 'zulu'
           java-version: '17'
-          # cache: maven
-      # - name: Build with Maven
-        # run: mvn -B package --file pom.xml
-       
-      # - name: Install dependencies
-      #   run: mvn dependency:go-offline compile compiler:testCompile
-
-      - name: Run Test
-        if: always()
-        run: mvn test
-        continue-on-error: true   
+      - run: mvn --batch-mode --update-snapshots verify
+      - run: mkdir staging && cp target/*.jar staging
+      - uses: actions/upload-artifact@v3
+        with:
+         name: Package
+         path: staging   
    
       
       - name: Copy History
