--- a/.github/workflows/newworkwlow.yml
+++ b/.github/workflows/newworkwlow.yml
@@ -10,14 +10,14 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
         with: 
-          distribution: 'zulu'
+          distribution: 'temurin'
           java-version: '17'
       - run: mvn --batch-mode --update-snapshots verify
-      - run: mkdir staging && cp target/*.jar staging
-      - uses: actions/upload-artifact@v3
-        with:
-         name: Package
-         path: staging   
+      # - run: mkdir staging && cp target/*.jar staging
+      # - uses: actions/upload-artifact@v3
+      #   with:
+      #    name: Package
+      #    path: staging   
    
       
       - name: Copy History
