--- a/.github/workflows/newworkwlow.yml
+++ b/.github/workflows/newworkwlow.yml
@@ -13,11 +13,11 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       - run: mvn --batch-mode --update-snapshots verify
-      # - run: mkdir staging && cp target/*.jar staging
-      # - uses: actions/upload-artifact@v3
-      #   with:
-      #    name: Package
-      #    path: staging   
+      - run: mkdir staging && cp target/*.jar staging
+      - uses: actions/upload-artifact@v3
+        with:
+         name: Package
+         path: staging 
    
       
       - name: Copy History
