--- a/.github/workflows/newworkwlow.yml
+++ b/.github/workflows/newworkwlow.yml
@@ -12,12 +12,12 @@ jobs:
         with: 
           distribution: 'temurin'
           java-version: '17'
-      - run: mvn --batch-mode --update-snapshots verify
-      - run: mkdir staging && cp target/*.jar staging
-      - uses: actions/upload-artifact@v3
-        with:
-         name: Package
-         path: staging 
+      # - run: mvn --batch-mode --update-snapshots verify
+      # - run: mkdir staging && cp target/*.jar staging
+      # - uses: actions/upload-artifact@v3
+      #   with:
+      #    name: Package
+      #    path: staging 
          
       - name: Run tests
         run: mvn clean test
