--- a/.github/workflows/newworkwlow.yml
+++ b/.github/workflows/newworkwlow.yml
@@ -21,6 +21,7 @@ jobs:
          
       - name: Run tests
         run: mvn clean test
+        if: always()
       
       - name: Copy History
         uses: actions/checkout@v3
