--- a/.github/workflows/newworkwlow.yml
+++ b/.github/workflows/newworkwlow.yml
@@ -20,7 +20,7 @@ jobs:
       #    path: staging 
          
       - name: Run tests
-        run: mvn -Dtest=ClassifierTest test
+        run: mvn -Dtest=ApplicationTest test
         # run: mvn clean test
 
       
@@ -41,7 +41,8 @@ jobs:
         uses: peaceiris/actions-gh-pages@v2
         if: always() 
         env:
-           PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+           # PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+           PERSONAL_TOKEN: $
            PUBLISH_BRANCH: gh-pages
            PUBLISH_DIR: allure-history
 
