--- a/.github/workflows/newworkwlow.yml
+++ b/.github/workflows/newworkwlow.yml
@@ -23,9 +23,9 @@ jobs:
         run: mvn -Dtest=ClassifierTest test
         # run: mvn clean test
 
-      
+      # Копируем историю в папку Аллюр хистори
       - name: Copy History
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
         if: always()
         with:
           ref: gh-pages
@@ -36,10 +36,10 @@ jobs:
         with:
           allure_results: build/allure-results
           allure_history: allure-history
-          keep_reports: '20'
+          keep_reports: 20
       - name: Publish report
-        uses: peaceiris/actions-gh-pages@v2
         if: always() 
+        uses: peaceiris/actions-gh-pages@v2
         env:
            PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
            PUBLISH_BRANCH: gh-pages
