--- a/.github/workflows/newworkwlow.yml
+++ b/.github/workflows/newworkwlow.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           gh_pages: gh-pages
           allure_report: allure-report
-          allure_results: build/allure-results
+          allure_results: target/allure-results
           allure_history: allure-history
           # keep_reports: 20
       - name: Publish report
