--- a/.github/workflows/newworkwlow.yml
+++ b/.github/workflows/newworkwlow.yml
@@ -13,7 +13,7 @@ jobs:
           distribution: 'temurin'
           java-version: '17'   
       - name: Run tests 
-          mvn clean test -Dtest=ApplicationTest
+        run: mvn clean test -Dtest=ApplicationTest
         # run: mvn clean test -Dtest=ClassifierTest
         # run: mvn clean test
 
